themes/cactus/static/css/style-white.css
/* ... */
  @font-face {
    font-style: normal;
    font-family: "JetBrains Mono";
    src: local("JetBrains Mono"), url("../lib/JetBrainsMono/ttf/JetBrainsMono-Regular.ttf") format("truetype");
  }
  *,
  *:before,
  *:after {
    box-sizing: border-box;
  }
  html {
    margin: 0;
    padding: 0;
    height: 100%;
    border-top: 2px solid #383838;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
  }
  body {
    margin: 0;
    height: 100%;
    background-color: #fff;
    color: #383838;
    font-display: swap;
    font-weight: 400;
    font-size: 14px;
    font-family: "JetBrains Mono", monospace;
    line-height: 1.725;
    text-rendering: geometricPrecision;
    flex: 1;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
  }
  .content {
    position: relative;
    display: flex;
    flex-direction: column;
    min-height: 100%;
    overflow-wrap: break-word;
  }
  .content p {
    hyphens: auto;
    -moz-hyphens: auto;
    -ms-hyphens: auto;
    -webkit-hyphens: auto;
  }
  .content code {
    hyphens: manual;
    -moz-hyphens: manual;
    -ms-hyphens: manual;
    -webkit-hyphens: manual;
  }
  .content a {
    color: #383838;
    text-decoration: none;
    background-image: linear-gradient(transparent, transparent 5px, #383838 5px, #383838);
    background-position: bottom;
    background-size: 100% 6px;
    background-repeat: repeat-x;
  }
  .content a:hover {
    background-image: linear-gradient(transparent, transparent 4px, #d480aa 4px, #d480aa);
  }
  .content a.icon {
    background: none;
  }
  .content a.icon:hover {
    color: #d480aa;
  }
  .content h1 a,
  .content .h1 a,
  .content h2 a,
  .content h3 a,
  .content h4 a,
  .content h5 a,
  .content h6 a {
    background: none;
    color: inherit;
    text-decoration: none;
  }
  .content h1 a:hover,
  .content .h1 a:hover,
  .content h2 a:hover,
  .content h3 a:hover,
  .content h4 a:hover,
  .content h5 a:hover,
  .content h6 a:hover {
    background-image: linear-gradient(transparent, transparent 6px, #d480aa 6px, #d480aa);
    background-position: bottom;
    background-size: 100% 6px;
    background-repeat: repeat-x;
  }
  .content h6 a {
    background: none;
    color: inherit;
    text-decoration: none;
  }
  .content h6 a:hover {
    background-image: linear-gradient(transparent, transparent 6px, #d480aa 6px, #d480aa);
    background-position: bottom;
    background-size: 100% 6px;
    background-repeat: repeat-x;
  }
  @media (min-width: 540px) {
    .image-wrap {
      flex-direction: row;
      margin-bottom: 2rem;
    }
    .image-wrap .image-block {
      flex: 1 0 35%;
      margin-right: 2rem;
    }
    .image-wrap p {
      flex: 1 0 65%;
    }
  }
  .max-width {
    max-width: 48rem;
  }
  @media (max-width: 480px) {
    .px3 {
      padding-right: 1rem;
      padding-left: 1rem;
    }
    .my4 {
      margin-top: 2rem;
      margin-bottom: 2rem;
    }
  }
  @media (min-width: 480px) {
    p {
      text-align: justify;
    }
  }
  #header {
    margin: 0 auto 2rem;
    width: 100%;
  }
  #header h1,
  #header .h1 {
    margin-top: 0;
    margin-bottom: 0;
    color: #383838;
    letter-spacing: 0.01em;
    font-weight: 700;
    font-style: normal;
    font-size: 1.5rem;
    line-height: 2rem;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
  }
  #header a {
    background: none;
    color: inherit;
    text-decoration: none;
  }
  #header #logo {
    display: inline-block;
    float: left;
    margin-right: 20px;
    width: 50px;
    height: 50px;
    border-radius: 5px;
    background-size: 50px 50px;
    background-repeat: no-repeat;
    filter: grayscale(100%);
    -webkit-filter: grayscale(100%);
  }
  #header #nav {
    color: #2bbc8a;
    letter-spacing: 0.01em;
    font-weight: 200;
    font-style: normal;
    font-size: 0.8rem;
  }
  #header #nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    line-height: 15px;
  }
  #header #nav ul a {
    margin-right: 15px;
    color: #2bbc8a;
  }
  #header #nav ul a:hover {
    background-image: linear-gradient(transparent, transparent 5px, #2bbc8a 5px, #2bbc8a);
    background-position: bottom;
    background-size: 100% 6px;
    background-repeat: repeat-x;
  }
  #header #nav ul li {
    display: inline-block;
    margin-right: 15px;
    border-right: 1px dotted;
    border-color: #2bbc8a;
    vertical-align: middle;
  }
  #header #nav ul .icon {
    display: none;
  }
  #header #nav ul li:last-child {
    margin-right: 0;
    border-right: 0;
  }
  #header #nav ul li:last-child a {
    margin-right: 0;
  }
  #header:hover #logo {
    filter: none;
    -webkit-filter: none;
  }
  @media screen and (max-width: 480px) {
    #header #title {
      display: table;
      margin-right: 5rem;
      min-height: 50px;
    }
    #header #title h1 {
      display: table-cell;
      vertical-align: middle;
    }
    #header #nav ul a:hover {
      background: none;
    }
    #header #nav ul li {
      display: none;
      border-right: 0;
    }
    #header #nav ul li.icon {
      position: absolute;
      top: 77px;
      right: 1rem;
      display: inline-block;
    }
    #header #nav ul.responsive li {
      display: block;
    }
    #header #nav li:not(:first-child) {
      padding-top: 1rem;
      padding-left: 70px;
      font-size: 1rem;
    }
  }
  #header-post {
    position: fixed;
    top: 2rem;
    right: 0;
    display: inline-block;
    float: right;
    z-index: 100;
  }
  #header-post a {
    background: none;
    color: inherit;
    text-decoration: none;
  }
  #header-post a.icon {
    background: none;
  }
  #header-post a.icon:hover {
    color: #d480aa;
  }
  #header-post nav ul {
    display: block;
    list-style-image: none;
    list-style-position: outside;
    list-style-type: none;
    padding-inline-start: 40px;
  }
  #header-post nav > ul {
    margin-block-end: 1em;
    margin-block-start: 1em;
  }
/* ... */

